feat(workspace): deliver enterprise ticket workspace
固化工单创建/领取/编辑/内部备注/状态流转/真实活动历史、SLA 与运行指标（V6/V7 migration、OperationalMetrics）、keyset 队列分页，以及文件 H2 工作区启动与备份恢复脚本和桌面/移动工作台界面。

验证边界：本次提交前当前工作树 Java 318 tests（14 个 MySQL 容器用例跳过）、Web 108 passed/3 skipped、lint 与生产 build 通过；MySQL 实库与浏览器 E2E 未在本次固化中重跑。